<resources>
    <string name="app_name">Movie Mania</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourites">Favourites</string>
    <string name="dumy_movie_name">Dumy movie name</string>
    <string name="year_2019">2019</string>
    <string name="dummy_movie_type">movie type</string>
    <string name="search_movie">Search movie</string>
    <string name="search_the_movie_name_here"><b>**Search the movie name here</b></string>
    <string name="result">Result</string>
    <string name="no_result_found">No Result Found</string>
    <string name="copyright_all_right_reserved">\@Copyright All right reserved</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="communication">Communication</string>
    <string name="language">Language</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="menu">menu</string>
    <string name="movies_series_episodes">Movies . Series . Episodes</string>
    <string name="welcome_shubham">welcome shubham</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_list">Remove from List</string>
    <string name="hi_have_you_watched_named_release_in_with_imdb_id">Hi have you watched %1$s named %2$s release in %3$s with imdb id %4$s</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="record_audio">Record Audio Permission</string>
    <string name="permission_grant_message">Please grant Record Audio Permission. This permission is required to use the use search by mic.</string>
    <string name="please_speak">Please speak…</string>
    <string name="sure_message">Are you sure you want to quit this App?</string>
    <string name="movies">Movies</string>
</resources>