<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/offsite_white">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/ic_home" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="@string/home"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/homeButton"
            app:layout_constraintStart_toStartOf="@+id/homeButton"
            app:layout_constraintTop_toBottomOf="@+id/homeButton" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/categoriesButton"
        app:layout_constraintStart_toEndOf="@id/homeButton"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/ic_search" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/search"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/searchButton"
            app:layout_constraintStart_toStartOf="@+id/searchButton"
            app:layout_constraintTop_toBottomOf="@+id/searchButton" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/categoriesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/aboutButton"
        app:layout_constraintStart_toEndOf="@id/searchButton"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/ic_category" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/category"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/categoriesButton"
            app:layout_constraintStart_toStartOf="@+id/categoriesButton"
            app:layout_constraintTop_toBottomOf="@+id/categoriesButton" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/ic_menu" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/menu"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/categoriesButton"
            app:layout_constraintStart_toStartOf="@+id/categoriesButton"
            app:layout_constraintTop_toBottomOf="@+id/categoriesButton" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>