<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.search.SearchFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/forwardArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_forward_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchBar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="13dp"
        android:hint="@string/search"
        android:maxEms="10"
        app:endIconMode="clear_text"
        app:helperText="@string/search_the_movie_name_here"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/micRecorder"
        app:layout_constraintStart_toEndOf="@+id/forwardArrow"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchBarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_search_background"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/micRecorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/mic_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="8dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_voice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        tools:itemCount="10"
        tools:listitem="@layout/item_history" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/resultHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/semibold"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyRecycler" />

    <ProgressBar
        android:id="@+id/searchingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noResultFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semibold"
        android:text="@string/no_result_found"
        android:textColor="	#899499"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/noResultImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/no_result_found"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noResultFound" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:elevation="1dp"
        android:orientation="vertical"
        app:flow_verticalGap="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/progressBarRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultHeading"
        tools:itemCount="10"
        tools:listitem="@layout/item_search" />

    <ProgressBar
        android:id="@+id/progressBarRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchRecycler" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pleaseSpeakText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/please_wait_background"
        android:elevation="1dp"
        android:fontFamily="@font/semibold"
        android:padding="10dp"
        android:text="@string/please_speak"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>